<resources>
    <string name="app_name">MKOI</string>
    <string name="hint_text">Enter a message</string>
    <string name="button_send">Send a message!</string>
    <string name="title_activity_login">MKOI 17Z</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MKOI 17Z</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="refresh_button">Refresh</string>
    <string name="download_button">Download</string>
    <string name="delete_button">Delete file</string>
    <string name="upload_button">Upload file</string>
    <string name="hash_button">Check file hash</string>
    <string name="signout_button">Sign out</string>

</resources>
